chore(ops): promote bundle env example and CI-strict Makefile\n\n- Promote ops/env/.env.example.bundle -> .env.example (kept timestamped backup)\n- Adopt Makefile.bundle as canonical (fail-fast targets), removed .bundle\n\nRationale: aligns with stricter CI and clearer local config templates.

--- a/ops/env/.env.example
+++ b/ops/env/.env.example
@@ -1,36 +1,16 @@
-# EVM networks
+# Example environment file
 EVM_NETWORK=sepolia
-ETH_RPC_URL_SEPOLIA=
-ARBITRUM_SEPOLIA_RPC_URL=
-AURORA_SEPOLIA_RPC_URL=
-POLYGON_ZKEVM_RPC_URL=
-AVALANCHE_FUJI_RPC_URL=
-POLYGON_AMOY_RPC_URL=
-
-# LayerZero (optional)
-LZ_ENDPOINT_SEPOLIA=
-LZ_DVN_ADDR=
-
-# ICP
-DFX_NETWORK=local
+ETH_RPC_URL_SEPOLIA=YOUR_RPC_URL
+DFX_NETWORK=ic
 ICP_IDENTITY=default
-
-# BTC
 BTC_NETWORK=testnet
 BTC_ANCHOR_MIN_DEPTH=6
 BTC_ANCHOR_CADENCE_MIN=30
-
-# Aigent Z
 NEXT_PUBLIC_IQUBE_API=http://localhost:8787
-NEXT_PUBLIC_BTC_ANCHOR_DEPTH=6
 NEXT_PUBLIC_SHOW_BTC_BADGES=true
-
-# Payments
-QOYN_TREASURY_ADDR=
-QCNT_TREASURY_ADDR=
-STABLECOIN_CUSTODIAN_ID=
-
-# KYC
+QOYN_TREASURY_ADDR=0xYourTreasury
+QCNT_TREASURY_ADDR=0xYourTreasury
+STABLECOIN_CUSTODIAN_ID=test-custodian
 KYC_PROVIDER_ID=sumsub
-KYC_API_URL=
-KYC_WEBHOOK_SECRET=
+KYC_API_URL=https://api.sumsub.com
+KYC_WEBHOOK_SECRET=replace-me
