test(canisters): add smoke tests and host-friendly helpers\n\n- proof_of_state: pending/batch/anchor basic tests (dev-dep futures)\n- btc_signer_psbt: anchor tx builder tests (dev-dep futures)\n- cross_chain_service: submit+attest test; host time helper; guard timers under wasm32\n- evm_rpc: parse helpers and config init tests\n\nThese establish CI baseline without network or ic runtime dependencies.

--- a/canisters/proof_of_state/Cargo.toml
+++ b/canisters/proof_of_state/Cargo.toml
@@ -13,3 +13,6 @@ ic-cdk-timers = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = "0.10"
+
+[dev-dependencies]
+futures = "0.3"
