--- a/.github/workflows/icp-ci.yml
+++ b/.github/workflows/icp-ci.yml
@@ -86,10 +86,12 @@ jobs:
         shell: bash
         run: |
           set -e
-          curl -fsSL https://internetcomputer.org/install.sh | bash
+          # Non-interactive install with yes flag
+          yes | curl -fsSL https://internetcomputer.org/install.sh | bash || true
           echo "$HOME/.local/share/dfx/bin" >> $GITHUB_PATH
           echo "$HOME/.local/share/dfxvm/bin" >> $GITHUB_PATH
-          source $GITHUB_ENV || true
+          source ~/.profile || true
+          export PATH="$HOME/.local/share/dfx/bin:$HOME/.local/share/dfxvm/bin:$PATH"
           if command -v dfxvm >/dev/null 2>&1; then
             dfxvm install 0.29.1
           fi
