--- a/.github/workflows/icp-ci.yml
+++ b/.github/workflows/icp-ci.yml
@@ -192,9 +192,9 @@ jobs:
             echo "-- submit_attestation (DVN 1) --"
             dfx canister call cross_chain_service submit_attestation "(
               \"$MESSAGE_ID\",
-              "dvn_validator_1",
+              \"dvn_validator_1\",
               vec {0xde; 0xad; 0xbe; 0xef}
-            )'
+            )"
             
             echo "-- get_message_attestations (1 attestation) --"
             dfx canister call cross_chain_service get_message_attestations "(\"$MESSAGE_ID\")"
