Update documentation with monorepo synchronization progress and lessons learned
- Renamed SESSION_PROGRESS_REPORT.md to PROGRESS_REPORT.md
- Added comprehensive progress update covering monorepo synchronization milestone
- Updated TECHNICAL_ISSUES_RESOLVED.md with recent critical issues and solutions
- Enhanced LESSONS_LEARNED.md with monorepo management insights and best practices
- Documented complete feature parity achievement between standalone and monorepo versions
- Added actionable recommendations for future development and team processes
- Removed redundant docs.bak.20250914_111218 directory cleanup

--- a/apps/ops-console/.env.local
+++ b/apps/ops-console/.env.local
@@ -1,3 +1,16 @@
-# Ops Console env for Solana canister access
-NEXT_PUBLIC_SOLANA_SIGNER_CANISTER_ID=ucwa4-rx777-77774-qaada-cai
+# BTC testnet endpoint
+NEXT_PUBLIC_RPC_BTC_TESTNET=https://mempool.space/testnet/api
+
+# ICP canister IDs (client-side)
+NEXT_PUBLIC_PROOF_OF_STATE_CANISTER_ID=umunu-kh777-77774-qaaca-cai
+NEXT_PUBLIC_BTC_SIGNER_CANISTER_ID=uxrrr-q7777-77774-qaaaq-cai
+NEXT_PUBLIC_CROSS_CHAIN_SERVICE_CANISTER_ID=u6s2n-gx777-77774-qaaba-cai
+NEXT_PUBLIC_EVM_RPC_CANISTER_ID=uzt4z-lp777-77774-qaabq-cai
 NEXT_PUBLIC_ICP_HOST=http://127.0.0.1:4943
+
+# ICP canister IDs (server-side for API routes)
+ICP_HOST=http://127.0.0.1:4943
+PROOF_OF_STATE_CANISTER_ID=umunu-kh777-77774-qaaca-cai
+BTC_SIGNER_PSBT_CANISTER_ID=uxrrr-q7777-77774-qaaaq-cai
+CROSS_CHAIN_SERVICE_CANISTER_ID=u6s2n-gx777-77774-qaaba-cai
+EVM_RPC_CANISTER_ID=uzt4z-lp777-77774-qaabq-cai
